--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -6,33 +6,32 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
-    --trying: 100 100% 100%;
 
     --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
- 
+    --card-foreground: 210 50% 35%; /* Slightly muted green */
+
     --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
- 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
- 
-    --secondary: 72, 82%, 38%;
-    --secondary-foreground: 72, 82%, 81%;
- 
+    --popover-foreground: 210 50% 35%; /* Slightly muted green */
+
+    --primary: 134, 38%, 49%; /* A deep green representing forests */
+    --primary-foreground: 210 40% 98%; /* A contrast to the deep green */
+
+    --secondary: 34, 32%, 82%; /* Beige color */
+    --secondary-foreground: 72, 82%, 38%; /* A contrast to the beige */
+
     --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
- 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
- 
+    --muted-foreground: 215.4 16.3% 46.9%; 
+
+    --accent: 134, 38%, 65%; /* Slightly lighter shade of green for accent */
+    --accent-foreground: 222.2 47.4% 11.2%; 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
- 
+    --ring: 134, 38%, 49%; /* Using primary green for the ring */
+
     --radius: 0.5rem;
   }
  
@@ -73,5 +72,24 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+.tiptap p {
+  @apply mt-2 mb-2;  /* This is "1em" spacing using Tailwind's default config */
+}
+
+.tiptap h1 {
+  @apply mt-4 mb-6 text-3xl font-bold;
+}
+div[contenteditable="true"] {
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+
+.ProseMirror {
+  hr {
+    @apply mt-4 mb-4
   }
 }
