--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -75,21 +75,75 @@
   }
 }
 
-.tiptap p {
-  @apply mt-2 mb-2;  /* This is "1em" spacing using Tailwind's default config */
-}
+.tiptap {
+  @apply p-4;
 
-.tiptap h1 {
-  @apply mt-4 mb-6 text-3xl font-bold;
-}
-div[contenteditable="true"] {
-  border: none;
-  background-color: transparent;
-  outline: none;
-}
-
-.ProseMirror {
-  hr {
-    @apply mt-4 mb-4
+  p {
+    @apply mt-2 mb-2;
   }
+
+  h1 {
+    @apply mt-4 mb-5 text-3xl font-bold;
+  }
+
+  h2 {
+    @apply mt-4 mb-4 text-2xl font-bold;
+  }
+
+  h3 {
+    @apply mt-4 mb-4 text-xl font-bold;
+  }
+
+  > * + * {
+    @apply mt-4;
+  }
+
+  ul, ol {
+    @apply pl-6;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
+  ol {
+    list-style: decimal;
+  }
+
+  a {
+    text-decoration: underline;
+  }
+
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+  }
+
+  textarea {
+    display: none;
+  }
+
+
+  
+  hr {
+    @apply mt-8 mb-8 border-2 border-gray-300 w-full;
+  }
+}
+
+.tiptap p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
+div[contenteditable="true"] {
+  @apply outline-none;
+}
+
+div[contenteditable="true"]:focus {
+  @apply ring-2 ring-gray-300 rounded-xl;
 }
