--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -177,3 +177,23 @@ div[contenteditable="true"]:focus {
 button:hover .textWithAnimatedUnderline::before {
   width: 100%;
 }
+
+html.lenis {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
+}
