--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -37,6 +37,9 @@
     --ring: 134, 38%, 49%; /* Using primary green for the ring */
 
     --radius: 0.5rem;
+
+    /* Custom colors */
+    --trying: 210 40% 98%;
   }
  
   .dark {
@@ -79,8 +82,6 @@
   }
 }
 
-
-
 /* Editable content */
 .tiptap {
   @apply p-4;
@@ -90,15 +91,15 @@
   }
 
   h1 {
-    @apply mt-4 mb-5 text-3xl font-bold;
+    @apply mt-4 mb-5 text-3xl font-youngSerif;
   }
 
   h2 {
-    @apply mt-4 mb-4 text-2xl font-bold;
+    @apply mt-4 mb-4 text-2xl font-youngSerif;
   }
 
   h3 {
-    @apply mt-4 mb-4 text-xl font-bold;
+    @apply mt-4 mb-4 text-xl font-youngSerif;
   }
 
   > * + * {
