--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -8,7 +8,7 @@
  
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 222.2 84% 4.9%;
     --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
@@ -179,6 +179,8 @@ button:hover .textWithAnimatedUnderline::before {
   width: 100%;
 }
 
+
+/* Lenis */
 html.lenis {
   height: auto;
 }
