Editor mooier gemaakt

--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -8,7 +8,7 @@
  
 @layer base {
   :root {
-    --background: 222.2 84% 4.9%;
+    --background: 34, 10%, 82%;
     --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
@@ -141,7 +141,7 @@
 }
 
 .tiptap p.is-editor-empty:first-child::before {
-  color: #adb5bd;
+  color: #bdb6ad;
   content: attr(data-placeholder);
   float: left;
   height: 0;
@@ -153,7 +153,7 @@ div[contenteditable="true"] {
 }
 
 div[contenteditable="true"]:focus {
-  @apply ring-2 ring-gray-300 rounded-xl;
+  @apply ring-2 ring-black rounded-xl;
 }
 
 /* Buttons */
