--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -17,10 +17,10 @@
     --popover: 0 0% 100%;
     --popover-foreground: 210 50% 35%; /* Slightly muted green */
 
-    --primary: 139 50% 45%;
+    --primary: 55 77% 24%;
     --primary-foreground: 210 40% 98%; /* A contrast to the deep green */
 
-    --secondary: 36 47% 89%; /* Beige color */
+    --secondary: 36 47% 89%;
     --secondary-foreground: 72 82% 38%; /* A contrast to the beige */
 
     --muted: 210 40% 96.1%;
@@ -200,3 +200,25 @@ html.lenis {
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
 }
+
+/* Headers, primary color */
+.header-shadow-right {
+  box-shadow: 11px 11px 0px 0px hsl(var(--primary));
+}
+/* rgb(109, 101, 14); */
+.header-shadow-left {
+  box-shadow: -11px 11px 0px 0px hsl(var(--primary));
+} 
+
+.header-shadow-left {
+  box-shadow: -11px 11px 0px 0px hsl(var(--primary));
+}
+
+.header-shadow-left-light {
+  box-shadow: -11px 11px 0px 0px hsl(var(--primary-foreground));
+}
+
+.header-shadow-right-light {
+  box-shadow: 7px 7px 0px 0px hsl(var(--secondary));
+}
+
