--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -201,6 +201,26 @@ button:hover .textWithAnimatedUnderline::before {
   width: 100%;
 }
 
+/* No animation */
+.textWithUnderline {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+
+}
+
+.textWithUnderline::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: currentColor;
+}
+
+ 
+
 
 
 
