--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -8,7 +8,7 @@
  
 @layer base {
   :root {
-    --background: 65 26% 91%;
+    --background: 0 0% 100%; /* White */
     --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
@@ -17,11 +17,11 @@
     --popover: 0 0% 100%;
     --popover-foreground: 210 50% 35%; /* Slightly muted green */
 
-    --primary: 55 77% 24%;
-    --primary-foreground: 210 40% 98%; /* A contrast to the deep green */
+    --primary: 0 0% 5%; /* Black */
+    --primary-foreground: 210 40% 98%;
 
-    --secondary: 36 47% 89%;
-    --secondary-foreground: 72 82% 38%; /* A contrast to the beige */
+    --secondary: 0 0% 100%; /* White */
+    --secondary-foreground: 0 0% 100%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%; 
@@ -217,6 +217,13 @@ button:hover .textWithAnimatedUnderline::before {
   width: 100%;
   height: 2px;
   background-color: currentColor;
+}
+
+.text-primary {
+  color: hsl(var(--primary));
+}
+.text-secondary {
+  color: hsl(var(--secondary));
 }
 
  
