--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -21,7 +21,7 @@
     --primary-foreground: 210 40% 98%;
 
     --secondary: 0 0% 100%; /* White */
-    --secondary-foreground: 0 0% 100%;
+    --secondary-foreground: 0 0% 98%; /* Black */
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%; 
@@ -87,7 +87,7 @@
   @apply p-4;
 
   p {
-    @apply mt-2 mb-4 leading-snug;
+    @apply mt-2 mb-4 leading-6;
   }
 
   h1 {
@@ -256,16 +256,16 @@ html.lenis {
 
 /* Headers, primary color */
 .header-shadow-right {
-  box-shadow: 11px 11px 0px 0px hsl(var(--primary));
+  box-shadow: 9px 9px 0px 0px hsl(var(--primary));
 }
 .header-shadow-left {
-  box-shadow: -11px 11px 0px 0px hsl(var(--primary));
+  box-shadow: -9px 9px 0px 0px hsl(var(--primary));
 } 
 .header-shadow-left-light {
-  box-shadow: -11px 11px 0px 0px hsl(var(--secondary-foreground));
+  box-shadow: -9px 9px 0px 0px hsl(var(--secondary-foreground));
 }
 .header-shadow-right-light {
-  box-shadow: 11px 11px 0px 0px hsl(var(--secondary-foreground));
+  box-shadow: 9px 9px 0px 0px hsl(var(--secondary-foreground));
 }
 
 
