--- a/willystogo/src/styles/globals.css
+++ b/willystogo/src/styles/globals.css
@@ -90,6 +90,10 @@
     @apply mt-2 mb-4 leading-6;
   }
 
+  p:empty::after {
+    content: "\00A0";
+  }
+
   h1 {
     @apply mt-4 mb-5 text-3xl font-youngSerif;
   }
